Closed Bug 1061048 Opened 10 years ago Closed 10 years ago

Fix some bad impliciti constructors in profiler

Categories

(Core :: Gecko Profiler, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

      No description provided.
Assignee: nobody → ehsan.akhgari
Blocks: explicit
Attachment #8482058 - Flags: review?(bgirard)
Attachment #8482058 - Flags: review?(bgirard) → review+
https://hg.mozilla.org/mozilla-central/rev/f6236160bb92
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: