Bug 1061048 - Fix some bad impliciti constructors in profiler; r=BenWa